# pmcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC_COMPLIANCE.md  agent-manifest.yaml  catalog-info.yaml  pyproject.toml
.github/workflows/: docker.yml  pipeline-bootstrap.yml  release.yml  (+1 more)
baml_src/: capability_match.baml  generators.baml
plans/: HANDOFF-agent-board-mcp-registration.md  ROADMAP-pmcp-agent-board-mcp.md  agent-board-overlay.template.jsonc  codebase-review-2026-06-15.md  detailed-describe-nested-schema-and-indexit-stdio-20260706-0920.md  detailed-idle-timeout-downstream-calls-20260628-0646.md  detailed-private-manifest-overlay-20260629-0841.md  manifest.json  phase-plan-v1-config.md  phase-plan-v1-observe.md  phase-plan-v1-resolver.md  phase-plan-v1-runtime.md  phase-plan-v2-lifecycle.md  phase-plan-v2-ops.md  phase-plan-v2-refresh.md  phase-plan-v2-serialize.md  phase-plan-v2-soak.md  phase-plan-v3-auth.md  phase-plan-v3-config.md  phase-plan-v3-conform.md  phase-plan-v3-observe.md  phase-plan-v3-proto.md  phase-plan-v3-tasks.md  phase-plan-v4-authobs.md  phase-plan-v4-authsoak.md  phase-plan-v4-elicit.md  phase-plan-v4-remote.md  phase-plan-v4-safeurl.md  phase-plan-v4-store.md  phase-plan-v5-catalogcli.md  phase-plan-v5-clihint.md  phase-plan-v5-climatch.md  phase-plan-v5-clisoak.md  phase-plan-v5-reqcli.md  phase-plan-v6-hostcontract.md  phase-plan-v6-hostmeta.md  phase-plan-v6-hostpolicy.md  phase-plan-v6-hostreg.md  phase-plan-v6-hostsoak.md  phase-plan-v7-AUTHRS.md  (+13 more)
specifications/: pmcp-gateway-orchestration-plan.md
specs/: README.md  phase-plans-v1.md  phase-plans-v10.md  phase-plans-v2.md  phase-plans-v3.md  phase-plans-v4.md  phase-plans-v5.md  phase-plans-v6.md  phase-plans-v7.md  phase-plans-v8.md  phase-plans-v9.md  tenant-code-mode-host-contract.md
tests/: conftest.py  test_auth.py  test_auth_origin_wiring.py  test_baseline_constraints.py  test_cli.py  test_cli_p4.py  test_client_manager.py  test_client_manager_reconnect.py  test_config_loader.py  test_env_store.py  test_guidance_config.py  test_http_dos.py  test_http_transport.py  test_install_command.py  test_integration.py  test_lazy_start.py  test_manifest.py  test_manifest_overlay.py  test_manifest_provision.py  test_offline_discovery.py  test_phase4_e2e.py  test_phase6_tenant_code_mode.py  test_policy.py  test_progressive_disclosure.py  test_provision_validation.py  test_refresher.py  test_registry.py  test_secrets_command.py  test_server.py  test_server_lifecycle.py  test_setup_command.py  test_singleton_lock_scope.py  test_ssrf_registry.py  test_startup_resolver.py  test_summary.py  test_tools.py  test_transport_http.py  test_version_checker.py
(+65 files in other folders)
