[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmcp"
version = "1.18.0"
description = "PMCP - Progressive MCP: Minimal context bloat with on-demand tool discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ViperJuice", email = "viperjuice@users.noreply.github.com" }
]
keywords = ["mcp", "claude", "progressive", "disclosure", "anthropic", "llm", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Repository = "https://github.com/ViperJuice/pmcp"
Homepage = "https://github.com/ViperJuice/pmcp"
Issues = "https://github.com/ViperJuice/pmcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]
http = [
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "sse-starlette>=1.6.0",
    "prometheus-client>=0.20",
]
all = [
    "pmcp[dev,http]",
]

[project.scripts]
pmcp = "pmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: opt-in live integration tests (require network and package managers)",
    "timeout(seconds): expected maximum runtime for slow opt-in tests",
]
filterwarnings = [
    # Suppress coroutine warnings from test mocks
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    # Suppress event loop closed warnings from subprocess cleanup
    "ignore::pytest.PytestUnraisableExceptionWarning:",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/pmcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 60
show_missing = true
skip_covered = true
